# rest-rs

./: .gitignore  Cargo.toml  Readme.md  env.example
crates/entity/src/: lib.rs  orders.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs
crates/user/: Cargo.toml
crates/user/src/: domain.rs  handler.rs  lib.rs
crates/web/: Cargo.toml
crates/web/src/: main.rs
entity/src/: lib.rs  order_errors.rs  orders.rs  prelude.rs  signal_records.rs  strategies.rs  subscribes.rs  symbols.rs  users.rs
migration/src/: lib.rs  m20220812_000001_create_users_table.rs  m20220812_000002_create_orders_table.rs  m20220813_000001_create_signal_records_table.rs  m20220813_000002_create_strategies_table.rs  m20220813_000003_create_subscribes_table.rs  m20220813_000004_create_symbols_table.rs  m20220813_000005_create_order_errors_table.rs
pkg/: Cargo.toml
pkg/src/: db.rs  eztime.rs  jwt.rs  lib.rs  responder.rs
src/: lib.rs  main.rs
user/: Cargo.toml
user/src/: domain.rs  handler.rs  lib.rs  repository.rs  usecase.rs
user/src/delivery/http/: handler.rs
user/src/repository/mysql/: user_repo.rs
user/src/usecase/: mod.rs  user_ucase.rs
