[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
pkg = { path = "../pkg" }

axum = { varsion = "0.5.15", features = ["headers"] }

sea-orm = { version = "^0", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { version = "1.0", features = ["full"] }
jsonwebtoken = "8.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_derive = "1.0.136"
once_cell = "1.8"
chrono = "0.4"
async-trait = "0.1.57"
bcrypt = "0.13.0"
anyhow = "1.0"
validator = { version = "0.16", features = ["derive"] }
