[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "../migration" }
entity = { path = "../entity" }
user = { path = "../user" }

axum = { varsion = "0.5.15", features = ["headers"] }
hyper = "0.14"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["map-request-body", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_derive = "1.0.136"
chrono = "0.4.21"
async-trait = "0.1.57"
validator = "0.16.0"
dotenv = "0.15.0"
sea-orm = { version = "^0", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
jsonwebtoken = "8.0"
once_cell = "1.8"
